bug on mobile homepage

--- a/app/assets/stylesheets/eyegum/main.scss
+++ b/app/assets/stylesheets/eyegum/main.scss
@@ -43,7 +43,7 @@
       background-repeat: no-repeat;
       max-width: 500px;
       height: 300px;
-      width: 100;
+      width: 100%;
       &.alt {
         background-image: asset_url("homepg_illustration_2");
       }
